--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <title>Coffee 3D</title>
 	<link rel = "icon" href = "assets/img/c.png" 
 	   type = "image/x-icon">
+	    <p class="end">By<a href="https://hansrajweb.netlify.app"><img class="img" src="ta.png"></a></p>
     </head>
     <body>
         <!--===== HEADER =====-->
