--- a/index.html
+++ b/index.html
@@ -68,5 +68,10 @@
 
         <!--===== MAIN JS =====-->
         <script src="assets/js/main.js"></script>
+	<script>
+	  document.addEventListener ('contextmenu', (e)=>{
+    		e.preventDefault();
+	  })
+      </script>
     </body>
 </html>
